--- a/clefssh.html
+++ b/clefssh.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tutotiel sur les clefs SSH</title>
+    <title>Tutoriel sur les clefs SSH</title>
   </head>
   <body>
     <h1>Tutoriel : Les clefs SSH et Github</h1>
