--- a/clefssh.html
+++ b/clefssh.html
@@ -13,7 +13,7 @@
 
     <p>Pour générer une clef SSH ouvrez un terminal (ctrl+alt+t sur toutes les bonnes distros) et tapez la commande : <mark>ssh-keygen</mark></p>
 
-    <p>Le terminal vous invite a entrez un nom de fichier et une passphrase, ce n'est pas obligatoire.</p>
+    <p>Le terminal vous invite a entrer un nom de fichier et une passphrase, ce n'est pas obligatoire.</p>
     <p>Si vous n'entrez pas de nom de fichier, le nom par defaut est : <strong>id_rsa</strong> pour la clef privée et <strong>id_rsa.pub</strong> pour la clef publique.
     Si vous entrez une passphrase, vous devrez la taper à chaque ouverture de connexion.</p>
 
